# crawlrs

./: Cargo.toml  README.md
docs/proposals/: scrape-v1.md
src/: cli.rs  client.rs  crawler.rs  error.rs  main.rs  node.rs  output.rs  session.rs  session_stats.rs
src/api/: crawl.rs  mod.rs
