[package]
name = "crawl"
version = "0.1.0"
authors = ["Parker Jones <parker.emailaddress@sharpspring.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
select = "0.5.0"
