[package]
name = "crawl"
version = "0.1.0"
authors = ["Parker Jones <parker.emailaddress@sharpspring.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
convey = "0.2.0"
env_logger = "0.9.0"
failure = "0.1.8"
itertools = "0.10.1"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
select = "0.5.0"
serde = "1.0.128"
serde_derive = "1.0.128"
serde_json = "1.0.66"
structopt = "0.3.22"
